Legacy colors to Components Update: Part I. Added CreativeChatEvent, WorldChatEvent.